--- a/app/Plugin/DebugKit/webroot/css/debug_toolbar.css
+++ b/app/Plugin/DebugKit/webroot/css/debug_toolbar.css
@@ -22,6 +22,8 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
+	box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.5);
+	border-radius: 8px 0 0 8px;
 }
 #debug-kit-toolbar .panel-tab {
 	clear: none;
@@ -371,4 +373,12 @@
 #debug-kit-toolbar #history-tab a.loading:after {
 	content : ' Loading...';
 	font-style:italic;
+}
+
+/* Minimized mode */
+#debug-kit-toolbar.minimized {
+	opacity: 0.75;
+}
+#debug-kit-toolbar.minimized:hover {
+	opacity: inherit;
 }
